--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-server.port=8888
-
-spring.datasource.url=jdbc:mysql://localhost:3306/sys?characterEncoding=utf-8&useSSL=false&serverTimezone=UTC&useAffectedRows=true
-spring.datasource.username=root
-spring.datasource.password=Root@123456
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.check-config-location=false
 mybatis.type-aliases-package=com.example.demo5.code.**.entity
+
+logging.level.com.example.demo5.code.textone.heiehei.dao=debug
+
 
